<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="20dp"
    android:layout_margin="5dp"
    android:orientation="horizontal"
    android:weightSum="150">

    <ImageView
        android:id="@+id/iv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="10"
        android:src="@drawable/autobot" />

    <TextView
        android:id="@+id/name_intro"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="20"
        android:gravity="center"
        android:text="@string/name" />

    <TextView
        android:id="@+id/tv_name_trans"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="40"
        android:gravity="center"
        android:text="ABCD" />

    <TextView

        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="20"
        android:gravity="center"
        android:text="@string/rank_title" />

    <TextView
        android:id="@+id/tv_rank"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="15"
        android:gravity="center"
        android:text="10" />

    <TextView
        android:id="@+id/over_intro"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="30"
        android:gravity="center"
        android:text="@string/overall" />

    <TextView
        android:id="@+id/tv_overall"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="15"
        android:gravity="center"
        android:text="100" />

</LinearLayout>