<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:background="@drawable/border"
    tools:context=".LauncherActivity">

    <TextView
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        android:gravity="center"
        android:text="@string/enter_players"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textSize="25sp" />

    <LinearLayout
        android:id="@+id/autobotLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/heading"
        android:layout_margin="20dp"
        android:orientation="horizontal"
        android:weightSum="100">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:src="@drawable/autobot" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="60"
            android:paddingLeft="10dp"
            android:text="@string/autobot"
            android:textColor="@android:color/holo_blue_dark" />

        <Button
            android:id="@+id/addAutobot"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="30"
            android:background="@android:color/holo_blue_dark"
            android:gravity="center"
            android:text="@string/autobot" />

    </LinearLayout>

    <TextView
        android:id="@+id/generalAuto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/autobotLL"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/add_auto"
        android:visibility="visible" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rABotView"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_below="@+id/autobotLL"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:visibility="invisible"></android.support.v7.widget.RecyclerView>

    <Button
        android:id="@+id/fightButton"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/rABotView"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:layout_margin="10dp"
        android:background="@android:color/black"
        android:foregroundGravity="center"
        android:gravity="center_horizontal"
        android:text="@string/fight"
        android:textColor="@android:color/holo_red_light"
        android:textSize="25sp"
        android:textStyle="bold"
        android:visibility="invisible" />


    <LinearLayout
        android:id="@+id/decpLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fightButton"
        android:layout_margin="20dp"
        android:orientation="horizontal"
        android:weightSum="100">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:src="@drawable/decpticon" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="55"
            android:paddingLeft="10dp"
            android:text="@string/decp"
            android:textColor="@android:color/holo_red_dark" />

        <Button
            android:id="@+id/addDecp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="35"
            android:background="@android:color/holo_red_dark"
            android:gravity="center"
            android:text="@string/decp" />

    </LinearLayout>


    <TextView
        android:id="@+id/generalDecp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/decpLL"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/add_decp"
        android:visibility="visible" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rDecpView"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_below="@+id/decpLL"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:visibility="invisible"></android.support.v7.widget.RecyclerView>


</RelativeLayout>
